Closed
Bug 420325
Opened 13 years ago
Closed 13 years ago
Selecting a menu item with the cursor, and moving with the keyboard results in two selected items
Categories
(Core :: Widget: Win32, defect, P2)
Tracking
()
VERIFIED
FIXED
People
(Reporter: adelfino, Assigned: vlad)
References
Details
(Keywords: regression)
Attachments
(2 files)
3.27 KB,
image/png
|
Details | |
2.08 KB,
patch
|
enndeakin
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b4pre) Gecko/2008022904 Minefield/3.0b4pre Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b4pre) Gecko/2008022904 Minefield/3.0b4pre Selecting a menu item with the cursor, and moving with the keyboard while holding <Crtl> + <Shift> results in two selected item. Reproducible: Always Steps to Reproduce: 1. Focus a menu item with the cursor. 2. Hold <Ctrl> or <Shift> (keep then pressed). 3. Move with the arrows. Actual Results: The menu has two selected items. The item that was focused with the cursor, is opened if one clicks it. The item that was focused with the arrows and <Ctrl>/<Shift> is s opened if one pressed <Enter> Expected Results: Only one item should be selected.
Reporter | ||
Updated•13 years ago
|
Summary: Selecting a menu item with the cursor, and moving with the keyboard while holding <Crtl> + <Shift> results in two selected item → Selecting a menu item with the cursor, and moving with the keyboard while holding <Crtl> + <Shift> results in two selected items
Reporter | ||
Comment 1•13 years ago
|
||
Reporter | ||
Updated•13 years ago
|
Attachment #306533 -
Attachment description: In this screenshot, the cursor is focusing Find Again. I pressed: <Ctrl> + <Up> → In this screenshot, the cursor is focusing Find Again. I pressed: <Ctrl> + <Up>, and <Up> again.
Reporter | ||
Comment 2•13 years ago
|
||
Actually, you don't have to _hold_ <Ctrl> to duplicate selected items. Just press any key that wouldn't activate something in the menu, nor close it, and then move with arrows. Examples: <Ctrl>, then <Up>/<Down>. <Shift>, then <Up>/<Down>. E, then <Up>/<Down> (in Edit menu).
Reporter | ||
Updated•13 years ago
|
Summary: Selecting a menu item with the cursor, and moving with the keyboard while holding <Crtl> + <Shift> results in two selected items → Selecting a menu item with the cursor, and moving with the keyboard after pressing <Crtl>/<Shift>/an unused letter results in two selected items
Reporter | ||
Comment 3•13 years ago
|
||
Note that the only thing you have to do is select an item menu with the cursor, and move with the arrow keys to get duplicated selected items.
Reporter | ||
Updated•13 years ago
|
Flags: blocking-firefox3?
Reporter | ||
Updated•13 years ago
|
Summary: Selecting a menu item with the cursor, and moving with the keyboard after pressing <Crtl>/<Shift>/an unused letter results in two selected items → Selecting a menu item with the cursor, and moving with the keyboard results in two selected items
Comment 4•13 years ago
|
||
--> Core::Widget:Win32
Status: UNCONFIRMED → NEW
Component: Menus → Widget: Win32
Ever confirmed: true
Flags: blocking-firefox3?
Keywords: regression
Product: Firefox → Core
Comment 5•13 years ago
|
||
Nominating for blocking/P2. Vlad, dunno if this is related to the menuItem hover state stuff and/or the same issue that we're seeing cause problems in bug 420237.
Flags: blocking1.9?
Priority: -- → P2
Assignee | ||
Comment 6•13 years ago
|
||
Mm, yeah, this is me. mozmenuactive vs. hover is being an issue here, I guess we can't trust hover without mozmenuactive.
Assignee: nobody → vladimir
Flags: blocking1.9? → blocking1.9+
Assignee | ||
Comment 7•13 years ago
|
||
I broke this recently (by adding a check for hover), so let's unbreak it. The reason why I broke it was to try to make -moz-appearance: menuitem work in the awesomebar dropdown, which, for some reason, is not getting the mozmenuactive attribute applied. That should probably be the actual bug that gets fixed for that.
Attachment #307780 -
Flags: review?
Assignee | ||
Updated•13 years ago
|
Attachment #307780 -
Flags: review? → review?(enndeakin)
Comment 8•13 years ago
|
||
Comment on attachment 307780 [details] [diff] [review] let's unbreak this > The reason why I broke it was to try to make -moz-appearance: menuitem work in > the awesomebar dropdown, which, for some reason, is not getting the mozmenuactive attribute applied. Because the items in the autocomplete are richlistitems.
Attachment #307780 -
Flags: review?(enndeakin) → review+
Assignee | ||
Comment 9•13 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Reporter | ||
Updated•13 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•