b=420325, menu item hover/cursor confusion, undoing my previous brokenness; r=enn